# redis-shelve

./: .gitignore  .gitlab-ci.yml  .travis.yaml  .travis.yml  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
redishelve/: __init__.py
redisshelve/: __init__.py
tests/: test_redishelve.py  test_redishelve_prefixed.py  test_redishelve_unprefixed.py
