[metadata]
name = redis-shelve
version = 1.0.0
author = Niels van Huijstee
author_email = niels@fuga.cloud
description = Alternative shelve that uses Redis as storage
classifier = 
    Development Status:: 5 - Production / Stable
    Intended Audience :: Developers
    License:: OSI Approved:: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Utilities

[aliases]
test = pytest

[tool:pytest]
addopts = --verbosity=-1 --cov . --cov-branch

[coverage:run]
omit = 
    setup.py
    .eggs/*
    .tox/*

[tox:tox]
envlist = py33,py34,py35,py36,py37

[testenv]
commands = python setup.py test

[testenv:flake8]
deps = 
    flake8
commands = flake8