[metadata]
name = redis-shelve
version = 1.0.2
author = Niels van Huijstee
author_email = niels@fuga.cloud
description = Alternative shelve that uses Redis as storage
home-page = https://github.com/FugaCloud/redis-shelve
classifier = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Utilities

[aliases]
test = pytest
[tool:pytest]
addopts = --verbosity=-1 --cov . --cov-branch

[coverage:run]
omit = 
    setup.py
    .eggs/*
    .tox/*

[tox:tox]
envlist = py34,py35,py36,py37

[testenv]
commands = python setup.py test
basepython = python3

[testenv:syntax]
deps = 
    flake8
    black
commands = 
    black --check --diff .

[testenv:py34]
deps =
    pytest<5
